docs: mark Task 19 as completed in implementation plans

--- a/docs/plans/conductor-v1-implementation.yaml
+++ b/docs/plans/conductor-v1-implementation.yaml
@@ -3312,7 +3312,9 @@ plan:
         - "internal/logger/file_test.go"
       depends_on: [18]
       estimated_time: "45m"
-      status: "pending"
+      status: "completed"
+      completed_at: "2025-11-10"
+      commit: "07b195b50fd6277945c5199eab47954011a4efb1"
 
       description: |
         Create .conductor/logs/ directory, write per-run log files, write per-task detailed logs,
