fix(plans): resolve file conflict between task 15 and task 2
Task 15 and Task 2 both modify internal/learning/store.go,
causing a wave calculation error in multi-file validation.

Added Task 2 to Task 15's depends_on array to enforce
sequential execution, moving tasks to separate waves and
preventing file assignment conflicts.

--- a/docs/plans/adaptive-learning-system/plan-02-configuration-testing.yaml
+++ b/docs/plans/adaptive-learning-system/plan-02-configuration-testing.yaml
@@ -206,7 +206,7 @@ plan:
       files:
         - "internal/learning/store.go"
         - "internal/learning/store_test.go"
-      depends_on: [14]
+      depends_on: [2, 14]
       estimated_time: "30m"
 
       description: |
