--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ docs/plans/subagent-deployment-strategy.md
 
 # MCP integration documentation (local research)
 docs/mcp-headless-invocation.md
+
+# Plan READMEs (local planning documentation)
+docs/plans/**/README.md
