feat: complete adaptive learning foundation tasks
Completed Tasks 1, 13, 14, 16, 17, and 21 from the adaptive learning
system implementation plan.

CHANGES:

1. Learning Database Schema (Task 1):
   - Created internal/learning/store.go with SQLite database
   - Embedded schema.sql with task_executions and approach_history tables
   - Comprehensive test coverage for store operations
   - Status: COMPLETED (2025-11-12)

2. Configuration Schema (Task 13):
   - Added LearningConfig struct to internal/config/config.go
   - Fields: enabled, db_path, auto_adapt_agent, enhance_prompts,
     min_failures_before_adapt, keep_executions_days, max_executions_per_task
   - Default values: enabled=true, db_path=.conductor/learning
   - Full test coverage with edge cases
   - Status: COMPLETED (2025-11-12)

3. Session ID Generation (Task 14):
   - Implemented internal/executor/session.go with generateSessionID()
   - Format: session-YYYYMMDD-HHMM
   - Test coverage for format validation and uniqueness
   - Status: COMPLETED (2025-11-12)

4. .gitignore Update (Task 16):
   - Added .conductor/learning/ to exclude learning database
   - Prevents accidental commits of project-local learning data
   - Status: COMPLETED (2025-11-12)

5. SQLite Dependency (Task 17):
   - Added github.com/mattn/go-sqlite3 to go.mod
   - CGO-enabled driver for SQLite database support
   - Status: COMPLETED (2025-11-12)

6. Learning Documentation (Task 21):
   - Created comprehensive docs/learning.md
   - Architecture overview, configuration guide, CLI commands
   - Usage examples and troubleshooting section
   - Updated README.md with learning system features
   - Status: COMPLETED (2025-11-12)

CONFIGURATION:
- Updated .conductor/config.yaml.example with learning section
- All options documented with helpful comments
- Default values shown for each setting

PLAN STATUS:
- Updated plan YAML files to mark completed tasks
- Wave 1: 6 tasks completed (1, 13, 14, 16, 17, 21)
- Ready for Wave 2+ execution

TEST 

--- a/.conductor/config.yaml.example
+++ b/.conductor/config.yaml.example
@@ -61,3 +61,45 @@ retry_failed: false
 
 # Example: Retry tasks that failed in previous runs
 # retry_failed: true
+
+# Learning system configuration
+# The learning system tracks task execution history and adapts future executions
+learning:
+  # Enable or disable the learning system (default: true)
+  enabled: true
+
+  # Database path for learning data (default: .conductor/learning)
+  db_path: .conductor/learning
+
+  # Auto-adapt agent selection based on learned patterns (default: false)
+  # When enabled, conductor will automatically suggest or switch agents based on past successes
+  auto_adapt_agent: false
+
+  # Enhance prompts with learned context (default: true)
+  # When enabled, conductor enriches task prompts with relevant execution history
+  enhance_prompts: true
+
+  # Minimum failures before adapting strategy (default: 2)
+  # Conductor will consider adapting after this many consecutive failures
+  min_failures_before_adapt: 2
+
+  # Days to keep execution history (default: 90)
+  # Older execution records are cleaned up automatically
+  keep_executions_days: 90
+
+  # Maximum execution records per task (default: 100)
+  # Limits the number of execution records kept for each unique task
+  max_executions_per_task: 100
+
+# Example: Disable learning system
+# learning:
+#   enabled: false
+
+# Example: Custom learning database path
+# learning:
+#   db_path: /var/lib/conductor/learning.db
+
+# Example: Enable automatic agent adaptation
+# learning:
+#   auto_adapt_agent: true
+#   min_failures_before_adapt: 3
