fix: resolve learning database path configuration ambiguity
The default DBPath was set to '.conductor/learning', which was ambiguous
and caused SQLite to create it as a database FILE instead of allowing
a DIRECTORY structure. This broke E2E tests that expected 'learning' to
be a directory.

Changes:
- Update default DBPath from '.conductor/learning' to
  '.conductor/learning/executions.db' for clarity
- Explicit file path now prevents path conflicts
- Allows .conductor/learning/ to be properly created as a directory
- Update config.yaml.example documentation with new path format
- Update config tests to expect new default path
- Clean up obsolete learning database file from version control

Fixes:
- TestE2E_LearningEnabled now passes
- TestE2E_FailureAdaptation now passes
- TestE2E_LargeComplexPlan now passes
- All integration tests passing

Root cause: os.MkdirAll() was failing because .conductor/learning
existed as a FILE, and MkdirAll tried to create it as a DIRECTORY.

--- a/.conductor/config.yaml.example
+++ b/.conductor/config.yaml.example
@@ -78,8 +78,9 @@ learning:
   # Enable or disable the learning system (default: true)
   enabled: true
 
-  # Database path for learning data (default: .conductor/learning)
-  db_path: .conductor/learning
+  # Database path for learning data (default: .conductor/learning/executions.db)
+  # This should be a file path, not a directory
+  db_path: .conductor/learning/executions.db
 
   # Auto-adapt agent selection based on learned patterns (default: false)
   # When enabled, conductor will automatically suggest or switch agents based on past successes
@@ -105,9 +106,9 @@ learning:
 # learning:
 #   enabled: false
 
-# Example: Custom learning database path
+# Example: Custom learning database path (must be a file path, not directory)
 # learning:
-#   db_path: /var/lib/conductor/learning.db
+#   db_path: /var/lib/conductor/learning/executions.db
 
 # Example: Enable automatic agent adaptation
 # learning:
