chore: remove .claude from repo - plugin provides all commands
- Update .gitignore to completely ignore .claude/ directory
- Remove tracked .claude/commands/ files from repo
- Users get commands via plugin/conductor-tools/ plugin installation
- Keeps repo clean - only plugin-managed code is tracked

--- a/.gitignore
+++ b/.gitignore
@@ -43,10 +43,8 @@ logs/
 !.conductor/config.yaml         # Track actual configuration
 !.conductor/config.yaml.example # Track example template
 
-# Claude Code directory (but track commands for all users)
+# Claude Code directory (completely ignored - plugin provides commands via plugin/conductor-tools/)
 .claude/
-!.claude/commands/              # Track plan generation slash commands (/doc, /doc-yaml, /cook-man)
-!.claude/commands/**            # Track all command files
 
 # Test learning databases
 internal/cmd/.conductor/
