chore: remove local planning docs from repo
- Add docs/subagent-deployment-strategy.md to .gitignore
- Add docs/concept_ai_corp_conductor_hybrid.md to .gitignore
- Remove both files from remote (local planning only)
- Keep repo focused on production code and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,8 @@ docs/original_poc_partial.md
 docs/TEST_REPORT.md
 docs/TEST_SUMMARY.txt
 docs/verify_tests.md
+docs/subagent-deployment-strategy.md
+docs/concept_ai_corp_conductor_hybrid.md
 
 # Internal development documentation (local reference only)
 PATTERN_EXTRACTION_REFERENCE.md
