chore: add removed docs to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ conductor
 # Deployment strategies (local planning docs)
 docs/
 !docs/conductor.md
+
+# Orphaned documentation (removed from repo)
+IMPLEMENTATION_SUMMARY.md
+PATTERN_EXTRACTION_REFERENCE.md
