chore: remove architecture review from version control
Add INTEGRATION_TASKS_ARCHITECTURE_REVIEW.md to gitignore.
This file is a temporary analysis document and should not
be tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ PATTERN_EXTRACTION_REFERENCE.md
 docs/
 !docs/plans/
 !docs/plans/integration-tasks-enhancement.yaml
+INTEGRATION_TASKS_ARCHITECTURE_REVIEW.md
