chore: remove integration-tasks-enhancement plan from version control
Add docs/plans/integration-tasks-enhancement.yaml to gitignore.
This is an internal development plan and should not be tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -78,9 +78,8 @@ conductor
 # Orphaned documentation (removed from repo)
 IMPLEMENTATION_SUMMARY.md
 PATTERN_EXTRACTION_REFERENCE.md
-\!docs/plans/integration-tasks-enhancement.yaml
+
 # To un-ignore a file in an ignored directory, need to:
-docs/
-!docs/plans/
-!docs/plans/integration-tasks-enhancement.yaml
+!docs/conductor.md
 INTEGRATION_TASKS_ARCHITECTURE_REVIEW.md
+docs/plans/integration-tasks-enhancement.yaml
