--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
           cache: true
 
       - name: Run tests with coverage
-        run: go test $(go list ./... | grep -v test/fixtures) -race -coverprofile=coverage.out -covermode=atomic
+        run: go test $(go list ./... | grep -v test/fixtures) -coverprofile=coverage.out -covermode=atomic
 
       - name: Display coverage summary
         run: go tool cover -func=coverage.out
