feat(executor): add test failure injection for agent retry (v2.10)
Transform test command failures from hard gates (immediate failure) to
retryable failures with feedback injection when QC is enabled.

Core Changes (v2.10):
- Track test failures without immediate return
- Inject test output feedback into agent prompt on retry
- Respect retry limit (default 2 attempts)
- Backward compatible: hard gate when QC disabled

Implementation:
- internal/executor/task.go: Test failure tracking + retry logic
- internal/executor/task_test.go: 4 new tests + updated 1 existing test
- .conductor/config.yaml: Updated enforce_test_commands comment

Additional Fixes:
- internal/agent/invoker.go: Fix box alignment with runewidth
- internal/logger/console.go: Proper emoji width calculation
- go.mod/go.sum: Add mattn/go-runewidth dependency

Test Coverage:
- TestExecute_TestFailure_TriggersRetry: Verifies retry happens
- TestExecute_TestFailure_InjectsFeedback: Validates prompt injection
- TestExecute_TestFailure_RespectsRetryLimit: Confirms max retries
- TestExecute_TestFailure_NoQC_HardGate: Ensures backward compatibility

Breaking: No (backward compatible)
Target: v2.10.0

--- a/.conductor/config.yaml
+++ b/.conductor/config.yaml
@@ -153,7 +153,8 @@ executor:
   enforce_dependency_checks: true
 
   # Run test commands after agent output but before QC review (default: true)
-  # Hard gate - task fails immediately if any command exits non-zero
+  # With QC enabled: soft gate - task retries with feedback (v2.10+)
+  # Without QC: hard gate - task fails immediately
   enforce_test_commands: true
 
   # Run optional per-criterion verification commands (default: true)
